--- a/pages/shared/_Layout.cshtml
+++ b/pages/shared/_Layout.cshtml
@@ -5,6 +5,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
     <meta charset="utf-8" />
     <title>@ViewData["Title"] - NewsSitePro</title>
     <link rel="stylesheet" href="~/css/site.css" />
@@ -14,5 +16,6 @@
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
