--- a/pages/shared/_Layout.cshtml
+++ b/pages/shared/_Layout.cshtml
@@ -16,6 +16,26 @@
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
-    @RenderSection("Scripts", required: false)
+    
+
+    <script>
+        console.log("Script is running!");
+        document.addEventListener('DOMContentLoaded', function () {
+            console.log("DOMContentLoaded event fired");
+            var logoutBtn = document.getElementById('logoutBtn');
+            if (logoutBtn) {
+                console.log("Logout button found");
+                logoutBtn.addEventListener('click', function (e) {
+                    alert("test");
+                    e.preventDefault();
+                    localStorage.removeItem('jwtToken');
+                    document.cookie = 'jwtToken=; Max-Age=0; path=/;';
+                    window.location.href = '/Login';
+                });
+            } else {
+                console.log("Logout button not found");
+            }
+        });
+    </script>
 </body>
 </html>
