--- a/pages/shared/_HeaderPartial.cshtml
+++ b/pages/shared/_HeaderPartial.cshtml
@@ -89,7 +89,7 @@
 
 
 
-@section Scripts {
+@* @section Scripts {
     <script>
         console.log("Script is running!");
         document.addEventListener('DOMContentLoaded', function () {
@@ -112,4 +112,4 @@
             }
         });
     </script>
-}
+} *@
