some progress into the cookies and authorization with authentication the post page still not working with error 401

--- a/pages/Login.cshtml
+++ b/pages/Login.cshtml
@@ -55,7 +55,8 @@
                     const data = await response.json();
                     if (data && data.token) {
                         localStorage.setItem('jwtToken', data.token);
-                            document.cookie = "jwtToken=" + data.token + "; path=/";
+                           // document.cookie = "jwtToken=" + data.token + "; path=/"; "Secure"; HttpOnly;
+                        document.cookie = `jwtToken=${data.token}; path=/; secure; samesite=strict`;
                         window.location.href = '/';
                     } else {
                         errorDiv.textContent = 'Invalid response from server.';
