--- a/Pages/shared/_LeftSidePanelPartial.cshtml
+++ b/Pages/shared/_LeftSidePanelPartial.cshtml
@@ -21,7 +21,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/Posts" class="nav-link">
+                    <a href="/Post" class="nav-link">
                         <span class="nav-icon">📰</span>
                         <span class="nav-text">News Feed</span>
                     </a>
@@ -58,6 +58,14 @@
                         <span class="nav-icon">⚙️</span>
                         <span class="nav-text">Admin Panel</span>
                     </a>
+                </li>
+                
+                <!-- Logout Button -->
+                <li class="nav-item" data-auth-required id="logoutNavItem">
+                    <button class="nav-link logout-btn" id="logoutBtn">
+                        <span class="nav-icon">🚪</span>
+                        <span class="nav-text">Logout</span>
+                    </button>
                 </li>
                 
                 <!-- Guest Only Items -->
