--- a/Pages/shared/_LeftSidePanelPartial.cshtml
+++ b/Pages/shared/_LeftSidePanelPartial.cshtml
@@ -26,10 +26,16 @@
                         <span class="nav-text">News Feed</span>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="/Search" class="nav-link">
+                        <span class="nav-icon">🔍</span>
+                        <span class="nav-text">Search</span>
+                    </a>
+                </li>
                 
                 <!-- Auth Required Items -->
                 <li class="nav-item" data-auth-required>
-                    <a href="/Profile" class="nav-link">
+                    <a href="/UserProfile" class="nav-link">
                         <span class="nav-icon">👤</span>
                         <span class="nav-text">Profile</span>
                     </a>
